@@ -13,6 +13,7 @@
 ### Services
 
  * [Install-Service](http://get-carbon.org/help/Install-Service.html) stops Windows service even when no settings/configuration has changed (fixes issue [#131](https://bitbucket.org/splatteredbits/carbon/issue/131/install-service-always-restarts-service)). 
+ * [Install-Service](http://get-carbon.org/help/Install-Service.html) didn't clear services depended on re-install.
 
 
 # 1.8.0 (7 September 2014)
